2012-03-22  Sudarsana Nagineni  <sudarsana.nagineni@linux.intel.com>

        [EFL] Implement LayoutTestController::setEditingBehavior
        https://bugs.webkit.org/show_bug.cgi?id=81124

        Adding missing implementation setEditingBehavior to EFL's
        LayoutTestController. This implementation allows us to
        unskip some tests from the skip list.

        Reviewed by Martin Robinson.

        * DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
        (LayoutTestController::setEditingBehavior): Implemented.

2012-03-22  Carlos Garcia Campos  <cgarcia@bb-webkit-rel-64.local.igalia.com>

        [GTK] Use the angle-bracket form to include wtf headers
        https://bugs.webkit.org/show_bug.cgi?id=81884

        Reviewed by Eric Seidel.

        Use #include <wtf/foo> instead of #include "foo".

        * DumpRenderTree/gtk/AccessibilityCallbacks.cpp:
        * DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        * DumpRenderTree/gtk/EditingCallbacks.cpp:
        * DumpRenderTree/gtk/WorkQueueItemGtk.cpp:
        * WebKitTestRunner/gtk/EventSenderProxyGtk.cpp:

2012-03-22  Alexander Færøy  <alexander.faeroy@nokia.com>

        Unreviewed, add Michael Brüning and Allan Jensen to committers.py.

        * Scripts/webkitpy/common/config/committers.py:

2012-03-22  Allan Sandfeld Jensen  <allan.jensen@nokia.com>

        [Qt] Enable FAST_MOBILE_SCROLLING when scrolling is delegated.
        https://bugs.webkit.org/show_bug.cgi?id=81889

        Reviewed by Kenneth Rohde Christiansen.

        Enable FAST_MOBILE_SCROLLING feature.

        * qmake/mkspecs/features/features.prf:

2012-03-22  Raphael Kubo da Costa  <rakuco@FreeBSD.org>

        [EFL] DRT: Do not pass a relative path to DOWNLOADED_FONTS_DIR.
        https://bugs.webkit.org/show_bug.cgi?id=81900

        Reviewed by Gustavo Noronha Silva.

        r111598 added the DOWNLOADED_FONTS_DIR define, but it used a relative