@@ -1,3 +1,12 @@
+2012-03-22  Alexander Færøy  <alexander.faeroy@nokia.com>
+
+        [Qt] Enable support for handling database quota's in the MiniBrowser
+        https://bugs.webkit.org/show_bug.cgi?id=81928
+
+        Reviewed by Simon Hausmann.
+
+        * MiniBrowser/qt/qml/BrowserWindow.qml:
+
 2012-03-22  Sudarsana Nagineni  <sudarsana.nagineni@linux.intel.com>
 
         [EFL] Implement LayoutTestController::setEditingBehavior
